--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@tabler/icons-react": "^3.5.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.13",
     "postcss": "^8.4.38",
