--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.13"
