--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "project1",
+  "name": "redsoftwaresolutions",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "npm install concurrently",
     "start:frontend": "cd frontend && npm run dev",
     "start:backend": "cd backend && npm run dev",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
@@ -28,5 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
