--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
-    "start": "node dist/index.js"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
