Added footer that directs to your social media, and added new font with new smoother picture transition also changed the quality of the company logo

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "build:backend": "cd backend && npm install && npm run build"
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "concurrently": "^8.2.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
