--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.1.5",
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
+    "@react-spring/web": "^9.7.4",
     "@tabler/icons-react": "^3.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "dayjs": "^1.11.11",
@@ -26,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.13"
