--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.13",
+    "lottie-react": "^2.4.0",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
