chore: merge to main (#16)
* chore: updated schema and installed icon library

* feature: added services and contacts page

* Emailjs branch (#5)

* Integrated emailjs, and send message feature

* added modal component for successful message, and about page transitioning images

* fix: merge conflict resolution

* chore: added commands for building

* chore: add concurrently to production

* chore: updated package.lock

* chore: modified build script

* fix: added start script for vite

* chore: added custom port for production

* chore: update server port

* fix: update backend start script

* fix: configure fetch for production

* fix: change backend url

* Added footer that directs to your social media, and added new font with new smoother picture transition also changed the quality of the company logo

* changed the styles to tailwind (#6)

* Add Facebook Link  (#7)

* Fix: Added Extentions for Deployment

* changed the styles to tailwind

* Feat: Add Facebook link

---------

Co-authored-by: RenzoLaporno <renzogabriel.laporno-19@cpu.edu.ph>
Co-authored-by: Dominic Bernas <nickobernas795@gmail.com>
Co-authored-by: Edmel John Linaugo <68092712+EdmelKun@users.noreply.github.com>

* feature: mission and vision section

* UI enhancments (#8)

* Fix: Added Extentions for Deployment

* changed the styles to tailwind

* Feat: Add Facebook link

* Enhancments: UI enhancments for constacts

* Fix: Resolve comments

---------

Co-authored-by: RenzoLaporno <renzogabriel.laporno-19@cpu.edu.ph>
Co-authored-by: Dominic Bernas <nickobernas795@gmail.com>

* chore: enhance animation transitions

* feature: responsive design

* Design branch (#11)

* Various UI Changes

* added new UI modifications and new main background wallpaper

* edited the spacing for landingpage.tsx

* resolved necessary changes

* fix: index number parsing

* chore: change int parsing

* fix: int parsing

* Design bra

--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "project1",
+  "name": "redsoftwaresolutions",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "npm install concurrently",
     "start:frontend": "cd frontend && npm run dev",
     "start:backend": "cd backend && npm run dev",
-    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:frontend": "cd frontend && npm install && npm run build",
+    "build:backend": "cd backend && npm install && npm run build"
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,11 +24,13 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
