--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "build": "tsc",
+    "dev": "nodemon",
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
